# itibu-backend

./: .pre-commit-config.yaml  manage.py  pyproject.toml  setup.cfg
.github/: itibu-backend-workflow.yaml
itibu/: asgi.py  settings.py  urls.py  wsgi.py
